# gecko

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml
crates/ast/: Cargo.toml
crates/ast/src/: lib.rs
crates/bytecode/: Cargo.toml
crates/bytecode/src/: lib.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: lib.rs
crates/gecko/: Cargo.toml
crates/gecko/src/: art.txt  freeze.rs  install.rs  main.rs  sandbox.rs
crates/gecko/tests/: cli.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lexer.rs  lib.rs  token.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs  parser.rs
crates/runner/: Cargo.toml
crates/runner/src/: main.rs
crates/runtime/: Cargo.toml  build.rs
crates/runtime/src/: lib.rs
docs/design/: 00-language.md  01-object-model.md  02-bytecode.md  03-gc.md  04-concurrency.md  05-embedding.md  06-builtins.md  07-data-engine.md  README.md
examples/: areas.py  arithmetic.py  counter.py  decorators.py  fib.py  geometry.py  grade.py  inventory.py  safedivide.py  shapes.py  sum.py  temperature.py  wordstats.py
examples/gecko/: async_tasks.py  counter.py  greeter.py  sandbox.py  workers.py
native/: meson.build
native/include/: gecko.h  setae.h
native/src/: array.c  bigint.c  builtins.c  code.c  gc.c  heap.c  internal.h  set.c  setae.c  strmeth.c  transfer.c  value.c  vm.c
python/: README.md  pyproject.toml
python/src/gecko/: __init__.py  _array.py  _native.py  actor.py  sandbox.py
scripts/: build-runner.sh
