[workspace]
resolver = "3"
members = [
    "crates/ast",
    "crates/bytecode",
    "crates/compiler",
    "crates/gecko",
    "crates/lexer",
    "crates/parser",
    "crates/runner",
    "crates/runtime",
]

[workspace.package]
version = "0.0.6"
edition = "2024"
license = "MIT"
repository = "https://github.com/mattt/gecko"
rust-version = "1.85"

[workspace.dependencies]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
