[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gecko"
version = "0.0.5"
description = "The gecko standard library, importable on gecko and on CPython"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]
