[package]
name = "runner"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Minimal runtime stub that gecko build embeds programs into."
publish = false

[[bin]]
name = "gecko-runner"
path = "src/main.rs"

[dependencies]
bytecode = { path = "../bytecode" }
runtime = { path = "../runtime" }
