[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "FFI bindings to the Gecko C runtime in native/."
publish = false
links = "gecko_runtime"
build = "build.rs"

[dependencies]
bytecode = { path = "../bytecode" }
crossbeam-deque = "0.8"

[dev-dependencies]
parser = { path = "../parser" }
compiler = { path = "../compiler" }
